# ws-2-langgraph

./: .env.example  .gitignore  README.md  SETUP-ALUNO.md  requirements.txt
aluno/: pyproject.toml
aluno/prompts/: 1-build-claude-memory.md  2-build-state-and-ledger.md  6-build-checkpointing.md  9-build-mcp-server.md
prompts/: 1-build-claude-memory.md  10-build-chainlit-ui.md  11-build-langgraph-studio.md  2-build-state-and-ledger.md  3-build-scoring.md  4-build-first-graph.md  5-build-conditional-and-loop.md  7-build-human-in-the-loop.md  8-build-api-and-tests.md
scripts/: bootstrap-w01.sh  restore.sh  seed-red.sh  seed-yellow.sh  studio.sh
sketch/: plan.md
w01-rag/: Dockerfile  Makefile  README.md  docker-compose.yml  mcp-config.json  pyproject.toml
w01-rag/generator/: main.py
w01-rag/infra/scripts/: init-databases.sql  init-neo4j.cypher  init-seaweedfs.sh  seed-neo4j.sh
w01-rag/prompts/: 1-build-claude-memory.md  10-build-fastapi.md  11-build-mcp-server.md  12-build-tests.md  13-run-dev.md  14-build-deploy.md  2-build-scaffold.md  3-build-docker-compose.md  4-build-init-scripts.md  5-build-data-generator.md  6-build-pydantic-schemas.md  7-build-ingestion-pipeline.md  8-build-query-engines.md  9-build-router-engine.md
w01-rag/sketch/: plan.md
w01-rag/src/api/: __init__.py  app.py  main.py
w01-rag/src/engines/: __init__.py  brain.py  config.py  ledger.py  memory.py  router.py
w01-rag/src/ingestion/: __init__.py  config.py  pipeline.py  readers.py  run.py
w01-rag/src/mcp/: __init__.py  run.py  server.py
w01-rag/tests/: conftest.py
(+13 files in other folders)
