[project]
name = "quality-guardian"
version = "0.1.0"
description = "Quality Guardian Agent (W02) — stateful LangGraph agent over the W01 DataOps Knowledge Hub"
requires-python = ">=3.11"
# Dependências reais ficam pinadas em requirements.txt (instaladas no venv). Aqui só
# o mínimo p/ o pacote `guardian` ser descoberto pelo langgraph-cli (langgraph.json -> ".").
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
